update 0.1.0 added new feature " switch , copper , out etc"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,12 @@
         "graphlib",
         "konsi",
         "Layouted",
+        "pannable",
+        "poopup",
         "rankdir",
+        "skyblue",
         "uska",
-        "uske"
+        "uske",
+        "zoomable"
     ]
 }
