--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
+    "dagre": "^0.8.5",
     "my-app": "file:",
     "next": "14.2.13",
     "react": "^18",
